--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "authing-wxapp-sdk",
+  "name": "authing-sdk-wxapp",
   "version": "4.8.1",
   "main": "./dist/index.js",
   "repository": "git@git.lucfish.com:sdk/authing-sdk-wxapp.git",
